# qvac-ext-lib-llama.cpp

./: CMakeLists.txt
common/: CMakeLists.txt  common.cpp  common.h
common_test/: CMakeLists.txt  uint8-buff-stream-wrapper.h
examples/embedding/: embedding.cpp
examples/parallel/: parallel.cpp
examples/simple/: simple.cpp
ggml/: CMakeLists.txt
ggml/include/: gguf.h
ggml/src/: CMakeLists.txt  ggml.c  gguf.cpp
ggml/src/ggml-cpu/: ops.cpp
ggml/src/ggml-metal/: ggml-metal-impl.h  ggml-metal.m  ggml-metal.metal
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
include/: llama-cpp.h  llama.h
src/: CMakeLists.txt  llama-batch.cpp  llama-context.cpp  llama-graph.cpp  llama-graph.h  llama-kv-cache-unified.cpp  llama-kv-cache-unified.h  llama-mmap.cpp  llama-model-load.h  llama-model.cpp  llama-model.h  llama-quant.cpp  uint8-buff-stream.cpp  uint8-buff-stream.h
tools/batched-bench/: batched-bench.cpp
tools/server/: utils.hpp
